--- a/index.css
+++ b/index.css
@@ -4,7 +4,7 @@ body {
     background-repeat: no-repeat;
     background-image: url("Ireem31.PNG");
     background-size: cover;
-    background-color: white;
+    background-color: black;
     color: burlywood;
   }
   
